--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
             Image: {
                 xmlns: "http://schemas.microsoft.com/deepzoom/2008",
                 // 图片文件夹地址
-                Url: "http://lht-test1.oss-cn-beijing.aliyuncs.com/mydzi_files1/",
+                Url: "./dzi_files/",
 
                 Overlap: "1",
 
-                TileSize: "512",
+                TileSize: "256",
 
                 Format: "jpg",
 
                 Size: {
-                    Height: "19282",
+                    Height: "2248",
 
-                    Width: "7047",
+                    Width: "4000",
                 }
             }
         },
